# synthesiser

./: .gitignore  LICENSE  README.md
src/midi/: controller.h  converter.cpp  converter.h  enums.h  icontroller.h  imidi_sink.h  imidi_source.h  midi_event.h  note.h  synthesizer_midi_sink.cpp  synthesizer_midi_sink.h
src/pattern/: observer.h
src/synthesis/: buffer.h  isteppable.h
src/synthesis/effects/: compression_effect.h  distortion_effect.h  ieffect.h  overdrive_effect.h
src/synthesis/envelopes/: adsr_configuration.h  adsr_envelope.cpp  adsr_envelope.h  ienvelope.h
src/synthesis/oscillators/: ioscillator.h  noise_oscillator.cpp  noise_oscillator.h  oscillator_factory.h  oscillators.h  pwm_configuration.h  pwm_oscillator.cpp  pwm_oscillator.h  reverse_sawtooth_oscillator.cpp  reverse_sawtooth_oscillator.h  sawtooth_oscillator.cpp  sawtooth_oscillator.h  sine_oscillator.cpp  sine_oscillator.h  trangle_oscillator.h  triangle_oscillator.cpp  triangle_oscillator.h
src/synthesis/oscillators/configurations/: configurations.h  ioscillator_configuration.h  noise_configuration.h  pwm_configuration.h  reverse_sawtooth_configuration.h  sawtooth_configuration.h  sine_configuration.h  triangle_configuration.h
src/synthesis/sound_sources/: isound_source.h  max_sound_souce.h  max_sound_source.cpp  poly_sound_source.cpp  poly_sound_source.h
src/synthesis/synthesizers/: isynthesizer.h  synthesizer.cpp  synthesizer.h
tests/: CMakeLists.txt  adsr-envelope-tests.cpp  amplitudetest.h  fft.h  midi-converter-tests.cpp  noise-oscillator-tests.cpp  observer-tests.cpp  poly-sound-source-tests.cpp  pwm-oscillator-tests.cpp  reverse-sawtooth-oscillator-tests.cpp  sawtooth-oscillator-tests.cpp  sine-oscillator-tests.cpp  synth-midi-sink-tests.cpp  synth-tests.cpp  test.cpp  triangle-oscillator-tests.cpp  wav.h
tests/sound_maker/: sound_maker.hpp
